src/test/deca/context/invalid/SansObjet/Cast-DeclVar-boolean-intVar.deca
// Description:
//    Declaration of a boolean variable using a boolean cast on a int variable .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.39) Illegal cast 
// 
// Historique: 
//    cree le 14/01/2022 

{
    int x =  20 ; 
    boolean y =  (boolean) ( x ) ; 
}
